--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
 <body>
 
   <div class="calculator-grid">
+
     <div class="output">
-      <div class="preview-operand"></div>
+      <div class="previous-operand"></div>
       <div class="current-operand"></div>
     </div>
+
     <button class="span-two">AC</button>
     <button>DEL</button>
-    <button>AC</button>
     <button>/</button>
     <button>1</button>
     <button>2</button>
